[package]
name = "sunflower"
description = "A small kernel written in Rust"
version = "0.0.0-SFK-00-Development-02"
edition = "2024"
license = "MIT"
repository = "https://github.com/janicria/sunflower"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
pc-keyboard = "0.8.0"
ps2 = "0.2.0"

[features]
disable_enter = [] # Disables the enter key from being pressed
bootimage = [] # Flag set automatically by bootimage and runner, must be set to build

[package.metadata.bootimage]
build-command = ["build", "--release", "--features", "bootimage"]
