[package]
name = "sunflower"
description = "A small kernel written in Rust"
version = "0.0.0" # See the VERSION_LONG static in sysinfo for actual version
edition = "2024"
license = "MIT"
repository = "https://github.com/janicria/sunflower"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
pc-keyboard = "0.8.0"
ps2 = "0.2.0"

[features]
disable_enter = [] # Disables the enter key from being pressed
bootimage = [] # Flag set automatically by bootimage and runner, must be set to build
debug_info = [] # Prints a lot of debugging info when running startup tasks

[package.metadata.bootimage]
build-command = ["build", "--release", "--features", "bootimage"]