[package]
name = "libfs"
description = "A library for creating, reading and modifying sunflower readable filesystems."
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/janicria/sunflower"

[dependencies]
bitflags = "2.10.0"
libutil = { path = "../libutil" }
thiserror = { version = "2.0.17", default-features = false }